src/test/deca/context/invalid/tests/INST-if_condition_unboolean.deca
// Description:
//    Affectation et typage
//
// Resultats:
//    Ligne 15: Void Type
// 
// Historique:
//    cree le 01/01/2022


class Test {
   int attributTest;
    void fct(){
        if(5){

        }
    }
   
}